# code_search

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STAGE3_SUMMARY.md  TICKET05_SUMMARY.md  TICKET06_SUMMARY.md  TICKETS_REASSESSMENT.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  dedup.rs  main.rs  output.rs  test_macros.rs  utils.rs
cli/src/commands/: mod.rs
cli/src/commands/accepts/: execute.rs  mod.rs  output.rs
cli/src/commands/boundaries/: execute.rs  mod.rs  output.rs
cli/src/commands/browse_module/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/calls_from/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/calls_to/: execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/clusters/: execute.rs  mod.rs
cli/src/commands/complexity/: execute.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/cycles/: execute.rs  mod.rs  output.rs
cli/src/commands/depended_by/: execute.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/depends_on/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/describe/: execute.rs  mod.rs  output.rs
cli/src/commands/duplicates/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs
cli/src/commands/function/: execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/god_modules/: execute.rs  execute_tests.rs  mod.rs  output.rs
cli/src/commands/hotspots/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs
cli/src/commands/import/: cli_tests.rs  execute.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/large_functions/: execute.rs  mod.rs  output.rs
cli/src/commands/location/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/many_clauses/: execute.rs  mod.rs  output.rs
cli/src/commands/path/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/returns/: execute.rs  mod.rs  output.rs
cli/src/commands/reverse_trace/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/search/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/setup/: execute.rs  mod.rs  output.rs
cli/src/commands/struct_usage/: cli_tests.rs  execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/trace/: cli_tests.rs  execute.rs  mod.rs  output.rs  output_tests.rs
cli/src/commands/unused/: execute.rs  execute_tests.rs  mod.rs  output.rs  output_tests.rs
db/: Cargo.toml
db/src/: db.rs  lib.rs  query_builders.rs  test_utils.rs
db/src/backend/: cozo.rs  cozo_schema.rs  mod.rs  surrealdb.rs  surrealdb_schema.rs
db/src/fixtures/: call_graph.json  mod.rs  structs.json
db/src/fixtures/output/calls_from/: empty.toon  single.json  single.toon
db/src/fixtures/output/calls_to/: single.json  single.toon
db/src/fixtures/output/depended_by/: empty.toon  single.json  single.toon
db/src/fixtures/output/depends_on/: single.toon
db/src/fixtures/output/function/: single.toon
db/src/fixtures/output/hotspots/: single.json  single.toon
db/src/fixtures/output/import/: full.toon
db/src/fixtures/output/path/: empty.toon  single.json  single.toon
db/src/fixtures/output/reverse_trace/: empty.toon  single.json  single.toon
db/src/fixtures/output/search/: empty.toon  modules.json
db/src/fixtures/output/trace/: empty.toon  single.json  single.toon
db/src/fixtures/output/unused/: empty.toon  single.json  single.toon
db/src/queries/: accepts.rs  calls.rs  calls_from.rs  calls_to.rs  clusters.rs  complexity.rs  cycles.rs  depended_by.rs  dependencies.rs  depends_on.rs  duplicates.rs  file.rs  function.rs  hotspots.rs  import.rs  large_functions.rs  location.rs  many_clauses.rs  mod.rs  path.rs  returns.rs  reverse_trace.rs  schema.rs  search.rs  specs.rs  struct_usage.rs  structs.rs  trace.rs  types.rs  unused.rs
db/src/types/: call.rs  mod.rs  results.rs  trace.rs
db/tests/: backend_integration.rs
docs/: GIT_HOOKS.md  NEW_COMMANDS.md  PENDING_COMMANDS.md  TESTING_STRATEGY.md  configuration.md
docs/examples/: cli_tests.rs.example  execute_impl.rs.example  output_tests.rs.example
src/: cli.rs  config.rs  db.rs  dedup.rs  lib.rs  main.rs  output.rs  test_macros.rs  test_utils.rs  utils.rs
src/commands/: import.rs  mod.rs
src/db/: backend.rs  config.rs  connection.rs  escape.rs  extraction.rs  mod.rs  query.rs  value.rs
src/fixtures/: call_graph.json  extracted_trace.json  type_signatures.json
src/queries/: accepts.rs  calls.rs  calls_from.rs  calls_to.rs  clusters.rs  complexity.rs  cycles.rs  depended_by.rs  dependencies.rs  depends_on.rs  duplicates.rs  file.rs  function.rs  hotspots.rs  mod.rs  (+16 more)
tests/: postgres_integration.rs
(+280 files in other folders)
