[package]
name = "code_search"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
cozo = { version = "0.7.6", default-features = false, features = ["compact", "storage-sqlite"] }
enum_dispatch = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toon = "0.1"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"

