[package]
name = "code_search"
version = "0.1.0"
edition = "2024"

[lib]
name = "code_search"
path = "src/lib.rs"

[[bin]]
name = "code_search"
path = "src/main.rs"

[dependencies]
apache_age = { version = "0.6", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
cozo = { version = "0.7.6", default-features = false, features = ["compact", "storage-sqlite"] }
enum_dispatch = "0.3"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toon = "0.1"
postgres = "0.19"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"

[features]
# Integration tests with PostgreSQL (requires local PostgreSQL instance)
postgres-tests = []

