[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
cozo = { version = "0.7.6", default-features = false, features = ["compact", "storage-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
regex = "1"
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
serde_json = "1.0"

[features]
test-utils = []
