[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
cozo = { version = "0.7.6", default-features = false, features = ["compact", "storage-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
regex = "1"
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }
tempfile = { version = "3", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
serde_json = "1.0"

[features]
default = ["backend-cozo"]
test-utils = ["tempfile", "serde_json"]
backend-cozo = []
backend-surrealdb = []
